# Ecuroad-api

./: .env.example  .gitignore  .vercelignore  API_PLANNING.md  README.md  config.py  main.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
api/: index.py
app/: dependencies.py
app/api/admin/: router.py
app/api/carreras/: repository.py  router.py  schemas.py  service.py
app/api/perfiles/: repository.py  router.py  schemas.py  service.py
app/core/: exceptions.py
app/db/: mongodb.py
app/middleware/: auth.py  logging_mw.py  security_headers.py
app/models/: audit_log.py  carrera.py  data_fuente_auditoria.py  perfil.py
app/utils/: logger.py  scoring.py  security.py
app/utils/etl/: base.py  factory.py  integrity.py  ole.py  snies.py
scripts/: etl_run.py  seed_db.py
tests/: conftest.py
tests/unit/: test_etl_parsers.py  test_scoring.py  test_security.py
