[project]
name = "eduroad-api"
version = "0.1.0"
requires-python = ">=3.11"
description = "EduRoad backend API — Colombian vocational orientation platform"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "beanie==1.26.0",
    "pymongo==4.8.0",
    "pydantic==2.7.4",
    "pydantic-settings==2.3.4",
    "python-ulid==2.7.0",
    "slowapi==0.1.9",
    "structlog==24.2.0",
    "openpyxl==3.1.5",
    "httpx==0.27.2",
    "mangum==0.17.0",
    "python-dotenv==1.0.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
